--- a/package.json
+++ b/package.json
@@ -1,35 +1,37 @@
 {
   "name": "mjml-mailchimp",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "Mailchimp compatible MJML v4 components",
   "author": {
     "name": "James Homer",
-    "email": "jameshomer85@gmail.com"
+    "email": "james@homerjam.es"
   },
   "license": "MIT",
   "repository": "https://github.com/homerjam/mjml-mailchimp.git",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node test/convert-mjml-to-html.js",
     "build": "npx babel --out-dir=lib src"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "babel-plugin-add-module-exports": "^1.0.0",
+    "babel-plugin-add-module-exports": "^1.0.4",
     "babel-plugin-transform-async-to-generator": "^6.24.1",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "babel-plugin-transform-regenerator": "^6.26.0",
     "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.6.1",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-stage-0": "^6.24.1"
   },
   "dependencies": {
     "babel-runtime": "^6.26.0",
-    "mjml-button": "^4.4.0-beta.1",
-    "mjml-core": "^4.4.0-beta.1",
-    "mjml-image": "^4.4.0-beta.1",
-    "mjml-section": "^4.4.0-beta.1",
-    "mjml-text": "^4.4.0-beta.1",
-    "mjml-validator": "^4.4.0-beta.1"
+    "lodash": "^4.17.21",
+    "mjml": "^4.12.0",
+    "mjml-button": "^4.12.0",
+    "mjml-core": "^4.12.0",
+    "mjml-image": "^4.12.0",
+    "mjml-section": "^4.12.0",
+    "mjml-text": "^4.12.0",
+    "mjml-validator": "^4.12.0"
   }
 }
